--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -47,6 +47,12 @@
             <version>2.14.2</version>
         </dependency>
 
+        <dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.1.1</version>
+		</dependency>
+
         <!-- Provided -->
 
         <dependency>
