--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,14 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
         <junit.jupiter.version>5.9.2</junit.jupiter.version>
+        <jmh.version>1.36</jmh.version>
     </properties>
 
     <dependencies>
 
-        <!-- DEFAULT -->
+        <!-- Default -->
 
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -43,8 +45,8 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.14.2</version>
         </dependency>
-        
-        <!-- PROVIDED -->
+
+        <!-- Provided -->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -53,7 +55,7 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- TEST -->
+        <!-- Test -->
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -69,11 +71,39 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.openjdk.jmh</groupId>
+                            <artifactId>jmh-generator-annprocess</artifactId>
+                            <version>${jmh.version}</version>
+                        </path>
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
