--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,8 @@
             <plugin>
                 <groupId>com.diffplug.spotless</groupId>
                 <artifactId>spotless-maven-plugin</artifactId>
-                <version>2.30.0</version>
+                <version>2.39.0</version>
+                <!-- <version>2.30.0</version> if working with JDK 8 -->
                 <configuration>
                     <java>
                         <eclipse>
