--- a/pom.xml
+++ b/pom.xml
@@ -192,13 +192,17 @@
                 <!-- <version>2.30.0</version> if working with JDK 8 -->
                 <configuration>
                     <java>
-                        <eclipse>
-                            <file>${project.basedir}/eclipse-formatter.xml</file>
-                        </eclipse>
                         <removeUnusedImports />
                         <importOrder>
-                            <file>${project.basedir}/import-order.conf</file>
+                            <file>${user.home}/.java-import-order</file>
                         </importOrder>
+                        <googleJavaFormat>
+                            <version>1.19.2</version>
+                            <!-- <version>1.7</version> if working with JDK 8 -->
+                            <style>AOSP</style>
+                            <formatJavadoc>false</formatJavadoc>
+                        </googleJavaFormat>
+                        <formatAnnotations />
                     </java>
                 </configuration>
             </plugin>
