--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,11 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <lombok.version>1.18.26</lombok.version>
-        <junit.jupiter.version>5.9.2</junit.jupiter.version>
-        <jacoco.version>0.8.10</jacoco.version>
-        <jmh.version>1.36</jmh.version>
+        <lombok.version>1.18.30</lombok.version>
+        <junit.jupiter.version>5.10.1</junit.jupiter.version>
+        <mockito.version>5.9.0</mockito.version>
+        <jacoco.version>0.8.11</jacoco.version>
+        <jmh.version>1.37</jmh.version>
     </properties>
 
     <dependencies>
@@ -69,7 +70,14 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.1.1</version>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
