--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <version>2.14.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.0</version>
+        </dependency>
+
         <!-- Provided -->
 
         <dependency>
